--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
     "next": "^6.1.1",
+    "next-images": "^1.0.0",
     "prettier": "^1.13.4",
     "raw-loader": "^0.5.1",
     "remark-autolink-headings": "^5.0.0"
@@ -44,6 +45,7 @@
     "react-piwik": "^1.5.0",
     "react-tooltip": "^3.6.0",
     "remark-highlight.js": "^5.0.0",
-    "styled-components": "^3.2.6"
+    "styled-components": "^3.2.6",
+    "template.data.gouv.fr": "^1.1.6"
   }
 }
